--- a/training-app-web/src/main/webapp/index.xhtml
+++ b/training-app-web/src/main/webapp/index.xhtml
@@ -1,10 +1,24 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:p="http://primefaces.org/ui">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:p="http://primefaces.org/ui">
 <h:head>
 </h:head>
 <h:body>
-"Ahoj"
-#{helloController.showHello()}
+
+  <p:growl id="messages" />
+
+  <p:dataTable value="#{userController.users}" var="user" id="checkTable">
+    <p:column headerText="first name">
+    #{user.firstName}
+  </p:column>
+    <p:column headerText="last name">
+      #{user.lastName}
+  </p:column>
+    <p:column headerText="user name">
+      #{user.userName}
+  </p:column>
+    <p:column headerText="email">
+      #{user.email}
+  </p:column>
+  </p:dataTable>
+
 </h:body>
 </html>
