--- a/training-app/src/main/webapp/index.xhtml
+++ b/training-app/src/main/webapp/index.xhtml
@@ -6,25 +6,26 @@
   <h:form>
     <p:growl id="messages" />
 
-    <p:menubar>
-      <p:menuitem value="VELOVIDA" icon="pi pi-file" />
-      <p:menuitem value="Dashboard" icon="pi pi-pencil" />
-      <p:menuitem value="Diary" icon="pi pi-question" />
-      <p:menuitem value="Goals" icon="pi pi-times" />
-      <p:menuitem value="Analysis" icon="pi pi-times" />
+    <p:menubar style="padding:0px">
+      <p:menuitem value="VELOVIDA"  />
+      <p:menuitem value="Dashboard" />
+      <p:menuitem value="Diary" />
+      <p:menuitem value="Goals" />
+      <p:menuitem value="Analysis" />
 
 
       <f:facet name="options">
-          <p:menubar>
-            <p:submenu label="New" icon="pi pi-file">
-              <p:menuitem value="New Workout" icon="pi pi-briefcase" />
-              <p:menuitem value="Import File" />
+          <p:menubar style="padding:0px">
+            <p:submenu label="New" icon="pi pi-cloud">
+              <p:menuitem value="New Workout" icon="pi pi-pencil" />
+              <p:menuitem value="Import File" icon="pi pi-cloud-upload"/>
               <p:separator />
             </p:submenu>
-            <p:submenu label="Hello Vida" icon="pi pi-file">
-              <p:menuitem value="My Profile" icon="pi pi-briefcase" />
+            <p:menuitem value="" icon="pi pi-cog" title="Settings"/>
+            <p:submenu label="Hello Vida" icon="pi pi-user">
+              <p:menuitem value="My Profile" icon="pi pi-user" />
               <p:separator />
-              <p:menuitem value="Log Out" />
+              <p:menuitem value="Log Out" icon="pi pi-sign-out"/>
             </p:submenu>
           </p:menubar>
       </f:facet>
@@ -55,41 +56,41 @@
   <h2>Workout</h2>
 
   <p:dataTable value="#{workoutController.workouts}" var="workout" id="workoutTable">
-    <p:column headerText="date">
+    <p:column headerText="date" style="width:150px;text-align: center;">
       <h:outputText value="#{workout.date}">
-        <f:convertDateTime pattern="dd.MM.yyyy HH:mm:ss" />
+        <f:convertDateTime pattern="dd.MM.yy HH:mm:ss" />
       </h:outputText>
     </p:column>
-    <p:column headerText="duration">
-      <h:outputText value="#{workout.duration}">
+    <p:column headerText="duration" style="width:80px;text-align: center;" >
+      <h:outputText value="#{workout.duration}" >
         <f:convertDateTime pattern="HH:mm" />
       </h:outputText>
     </p:column>
-    <p:column headerText="motion">
+    <p:column headerText="motion" style="width:80px;text-align: center;"> 
       <h:outputText value="#{workout.motion}">
         <f:convertDateTime pattern="HH:mm" />
       </h:outputText>
     </p:column>
-    <p:column headerText="distance">
+    <p:column headerText="distance" style="width:80px;text-align: center;">
       <h:outputText value="#{workout.distance}">
         <f:convertNumber pattern="#.##" />
       </h:outputText>
     </p:column>
-    <p:column headerText="ascend">
+    <p:column headerText="ascend" style="width:80px;text-align: center;">
       #{workout.ascend}
   </p:column>
-    <p:column headerText="speed">
+    <p:column headerText="speed" style="width:80px;text-align: center;">
       #{workout.averageSpeed}
   </p:column>
-    <p:column headerText="heart rate">
+    <p:column headerText="heart rate" style="width:80px;text-align: center;">
       <h:outputText value="#{workout.averageHeartRate}">
         <f:convertNumber pattern="#.##" />
       </h:outputText>
     </p:column>
-    <p:column headerText="trimp">
+    <p:column headerText="trimp" style="width:80px;text-align: center;">
       #{workout.trimp}
   </p:column>
-    <p:column headerText="cadence">
+    <p:column headerText="cadence" style="width:80px;text-align: center;">
       #{workout.averageCadence}
   </p:column>
   </p:dataTable>
