--- a/training-app/src/main/webapp/index.xhtml
+++ b/training-app/src/main/webapp/index.xhtml
@@ -1,5 +1,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:p="http://primefaces.org/ui" xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
+<style>
+.ui-tabs-header a {
+    color: #333 !important;
+}
+
+body .ui-tabs .ui-tabs-nav .ui-tabs-header {
+  background-color: white; border:0; !important;
+}
+</style>
 </h:head>
 <h:body>
 
@@ -7,7 +16,7 @@
     <p:growl id="messages" />
 
     <p:menubar style="padding:0px">
-      <p:menuitem value="VELOVIDA"  />
+      <p:menuitem value="VELOVIDA" />
       <p:menuitem value="Dashboard" />
       <p:menuitem value="Diary" />
       <p:menuitem value="Goals" />
@@ -15,19 +24,19 @@
 
 
       <f:facet name="options">
-          <p:menubar style="padding:0px">
-            <p:submenu label="New" icon="pi pi-cloud">
-              <p:menuitem value="New Workout" icon="pi pi-pencil" />
-              <p:menuitem value="Import File" icon="pi pi-cloud-upload"/>
-              <p:separator />
-            </p:submenu>
-            <p:menuitem value="" icon="pi pi-cog" title="Settings"/>
-            <p:submenu label="Hello Vida" icon="pi pi-user">
-              <p:menuitem value="My Profile" icon="pi pi-user" />
-              <p:separator />
-              <p:menuitem value="Log Out" icon="pi pi-sign-out"/>
-            </p:submenu>
-          </p:menubar>
+        <p:menubar style="padding:0px">
+          <p:submenu label="New" icon="pi pi-cloud">
+            <p:menuitem value="New Workout" icon="pi pi-pencil" />
+            <p:menuitem value="Import File" icon="pi pi-cloud-upload" />
+            <p:separator />
+          </p:submenu>
+          <p:menuitem value="" icon="pi pi-cog" title="Settings" />
+          <p:submenu label="Hello Vida" icon="pi pi-user">
+            <p:menuitem value="My Profile" icon="pi pi-user" />
+            <p:separator />
+            <p:menuitem value="Log Out" icon="pi pi-sign-out" />
+          </p:submenu>
+        </p:menubar>
       </f:facet>
     </p:menubar>
   </h:form>
@@ -36,63 +45,82 @@
 
   <p:growl id="messages" />
 
-  <h2>User</h2>
-
-  <p:dataTable value="#{userController.users}" var="user" id="userTable">
-    <p:column headerText="first name">
+  <p:tabView>
+    <p:tab title="Past 7 Days" >
+      <!--p:dataTable value="#{userController.users}" var="user" id="userTable">
+        <p:column headerText="first name">
     #{user.firstName}
   </p:column>
-    <p:column headerText="last name">
+        <p:column headerText="last name">
       #{user.lastName}
   </p:column>
-    <p:column headerText="user name">
+        <p:column headerText="user name">
       #{user.userName}
   </p:column>
-    <p:column headerText="email">
+        <p:column headerText="email">
       #{user.email}
   </p:column>
-  </p:dataTable>
+      </p:dataTable-->
 
-  <h2>Workout</h2>
+      <h3>Workouts</h3>
 
-  <p:dataTable value="#{workoutController.workouts}" var="workout" id="workoutTable">
-    <p:column headerText="date" style="width:150px;text-align: center;">
-      <h:outputText value="#{workout.date}">
-        <f:convertDateTime pattern="dd.MM.yy HH:mm:ss" />
-      </h:outputText>
-    </p:column>
-    <p:column headerText="duration" style="width:80px;text-align: center;" >
-      <h:outputText value="#{workout.duration}" >
-        <f:convertDateTime pattern="HH:mm" />
-      </h:outputText>
-    </p:column>
-    <p:column headerText="motion" style="width:80px;text-align: center;"> 
-      <h:outputText value="#{workout.motion}">
-        <f:convertDateTime pattern="HH:mm" />
-      </h:outputText>
-    </p:column>
-    <p:column headerText="distance" style="width:80px;text-align: center;">
-      <h:outputText value="#{workout.distance}">
-        <f:convertNumber pattern="#.##" />
-      </h:outputText>
-    </p:column>
-    <p:column headerText="ascend" style="width:80px;text-align: center;">
+      <p:dataTable value="#{workoutController.workouts}" var="workout" id="workoutTable">
+        <p:column headerText="date" style="width:150px;text-align: center;">
+          <h:outputText value="#{workout.date}">
+            <f:convertDateTime pattern="dd.MM.yy HH:mm:ss" />
+          </h:outputText>
+        </p:column>
+        <p:column headerText="duration" style="width:80px;text-align: center;">
+          <h:outputText value="#{workout.duration}">
+            <f:convertDateTime pattern="HH:mm" />
+          </h:outputText>
+        </p:column>
+        <p:column headerText="motion" style="width:80px;text-align: center;">
+          <h:outputText value="#{workout.motion}">
+            <f:convertDateTime pattern="HH:mm" />
+          </h:outputText>
+        </p:column>
+        <p:column headerText="distance" style="width:80px;text-align: center;">
+          <h:outputText value="#{workout.distance}">
+            <f:convertNumber pattern="#.##" />
+          </h:outputText>
+        </p:column>
+        <p:column headerText="ascend" style="width:80px;text-align: center;">
       #{workout.ascend}
   </p:column>
-    <p:column headerText="speed" style="width:80px;text-align: center;">
+        <p:column headerText="speed" style="width:80px;text-align: center;">
       #{workout.averageSpeed}
   </p:column>
-    <p:column headerText="heart rate" style="width:80px;text-align: center;">
-      <h:outputText value="#{workout.averageHeartRate}">
-        <f:convertNumber pattern="#.##" />
-      </h:outputText>
-    </p:column>
-    <p:column headerText="trimp" style="width:80px;text-align: center;">
+        <p:column headerText="heart rate" style="width:80px;text-align: center;">
+          <h:outputText value="#{workout.averageHeartRate}">
+            <f:convertNumber pattern="#.##" />
+          </h:outputText>
+        </p:column>
+        <p:column headerText="trimp" style="width:80px;text-align: center;">
       #{workout.trimp}
   </p:column>
-    <p:column headerText="cadence" style="width:80px;text-align: center;">
+        <p:column headerText="cadence" style="width:80px;text-align: center;">
       #{workout.averageCadence}
   </p:column>
-  </p:dataTable>
+      </p:dataTable>
+
+    </p:tab>
+    <p:tab title="Past 28 Days" >
+
+    </p:tab>
+    <p:tab title="Current Week" >
+
+    </p:tab>
+    <p:tab title="Current Month" >
+
+    </p:tab>
+    <p:tab title="Current Year" >
+
+    </p:tab>
+    <p:tab title="All">
+
+    </p:tab>
+  </p:tabView>
+
 </h:body>
 </html>
